# wascc-fibonacci-actor

./: .gitignore  Cargo.toml  README.md  fibonacci-wascc.yaml  justfile  uppercase-wascc.yaml
src/: lib.rs
