[package]
name = "fibonacci"
version = "0.1.0"
authors = ["Sjoerd During <sjoerd.during@jcore.com>"]
edition = "2020"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = '0.4.8'
serde = { version = "1.0.104", features = ["derive"]}
wascc-actor = "0.7"
wascc-codec = "0.7"
tramp = “0.3.0”

[profile.release]
opt-level = "s"

[workspace]
